flexc++ (2.06.00)

  * Added directive %startcondition-name specifying a non-default name for the
    StartCondition__ enum.

  * Updated the man-pages/manual.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2017 12:33:58 +0100

flexc++ (2.05.00)

  * Precompiled headers are rebuilt when their .h or .ih file have changed.

  * Added option --own-parser (-P) showing the actions of flexc++'s own parser
    when parsing a lexer-specification file.

  * New parser, built by bisonc++ V5.00.00.

  * Repaired the faulty long-option definitions in main.cc, due to which
    long options were not properly recognized

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 13 Apr 2016 12:37:09 +0530

flexc++ (2.04.00)

  * Carlos Bril and Micha de Rijk detected a curious bug resulting in flexc++
    never recognizing its initial character range. E.g, these two rules
        a
        .|\n

    place \t into the 0th character range containing the characters \0 through
    \t. A scanner generated for these two rules echoed \t to cout as an
    unrecognized character when running
        echo '\t' | a.out
    The bug was caused by flexc++ using range numbers rather than offsets in
    dfarow/transitions.cc and dfarow/transit.cc (and related files)

  * Added regression test p19 (regression/p19) to test recurrence of the
    abovementioned bug.

  * The bugfix on Fri Mar 13 (!) 2015 of a bug reported by Wopke Hellinga and
    Mark Redeman reintroduced a problem with handling the lookahead operator,
    causing regression test p02 to fail since then. This version implements an
    alternative fix for the bug reported by Wopke and Mark, which does not
    cause p02 to fail (see parser/lex.cc).

  * Several inconsistencies in the manual were fixed.

  * The source file containing main() was renamed to main.cc (was: flexc++.cc);
    the internal header file for the main program was renamed to main.ih.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 06 Mar 2016 18:30:37 +0100
