@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ V 2.06.00</title>
+<title>Flexc++ V 2.06.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Flexc++ V 2.06.00</h1>
+<h1 id="title">Flexc++ V 2.06.01</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2008-2017</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.01">2.06.01</a>
+Mar 04, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.00">2.06.00</a>
 Mar 01, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.05.00">2.05.00</a>
@@ -40,9 +42,7 @@ Apr 13, 2016;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.04.00">2.04.00</a>
 Mar 06, 2016;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.04">2.03.04</a>
-Dec 14, 2015;
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.03">2.03.03</a>
-Oct  6, 2015.
+Dec 14, 2015.
         </ul>
     
 <p>
