@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">flexc++api(3)</h1>
-<h2 id="author">flexc++ API<br/>(flexc++.2.06.00.tar.gz)</h2>
+<h2 id="author">flexc++ API<br/>(flexc++.2.06.01.tar.gz)</h2>
 <h2 id="date">2008-2017</h2>
 
 
