@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ (Version 2.06.00) User Guide</title>
+<title>Flexc++ (Version 2.06.01) User Guide</title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -9,7 +9,7 @@
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
-<h1 id="title">Flexc++ (Version 2.06.00) User Guide</h1>
+<h1 id="title">Flexc++ (Version 2.06.01) User Guide</h1>
 <h2 id="author">
         <a href="mailto:f.b.brokken@rug.nl">Frank B. Brokken</a>, 
         <a href="mailto:j.p.van.oosten@rug.nl">Jean-Paul van Oosten</a>, and
